--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@tensorflow/tfjs": "^4.12.0"
+		"@tensorflow/tfjs": "^4.12.0",
+		"@types/three": "^0.157.2",
+		"three": "^0.157.0"
 	}
 }
