--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"@tensorflow/tfjs": "^4.12.0",
+		"@tensorflow/tfjs-vis": "^1.5.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"@tensorflow/tfjs": "^4.12.0",
 		"@types/three": "^0.157.2",
 		"three": "^0.157.0"
 	}
